# hello_cmake

./: LICENSE  README.md
2_better_hello_world/: CMakeLists.txt  COPYRIGHT  README
2_better_hello_world/doc/: hello.txt
2_better_hello_world/src/: CMakeLists.txt  main.cpp
3_static_shared_lib/: CMakeLists.txt
3_static_shared_lib/lib/: CMakeLists.txt  hello.h
3_static_shared_lib/src/: CMakeLists.txt  main.cpp  main2.cpp
4_using_other_module/: CMakeLists.txt
4_using_other_module/src/: CMakeLists.txt  main.cpp
5_create_my_module/cmake/: FindHELLO.cmake
hello_cmake/: CMakeLists.txt  hello.cpp  main.cpp
single_cpp/: CMakeLists.txt
